tests/ui/feature-gates/feature-gate-global-registration.stderr
error: expected one of `!` or `::`, found `(`
  --> $DIR/feature-gate-global-registration.rs:1:1
   |
LL | todo!();
   | ^^^^^^^
   | |
   | expected one of `!` or `::`
   | in this macro invocation

error: aborting due to 1 previous error

